--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="dist/styles.css" rel="stylesheet" />
   </head>
   <body aurelia-app="main">
   </body>
